no set cleartimeout yet

--- a/task_A_JohnMogi.html
+++ b/task_A_JohnMogi.html
@@ -11,7 +11,7 @@
     <script src="index.js"></script>
 
 </head>
-<body onload="startjs()">
+<body >
     <div class="container">
 
             <div class="jumbotron">
@@ -27,14 +27,10 @@ P.S. my form will validate you so if a message pops out in this very area- take 
             <div class="container">
           
         <input name="ballCalcul" id="ballCalcul" type="text" placeholder="Please enter a designated ball radius between 1-94" >
-        <!-- required -->
         <span id="ballOutput"></span>
         <div class="sep"></div>
-        <!-- <input type="button" name="btn" value="Start" onclick="to_start(toggle)";>
-<input type="button" name="btn" value="Stop" onclick="to_stop(toggle)";> -->
-        <!-- <button type="button" name="cleanCanvas" id="stopGen" class="btn btn-info">Generate Random</button> -->
-        <button type="button" name="subBut" id="submitBut" class="btn btn-success">Calculate ball radius</button>
-
+        <button type="button" name="geneteBut" id="geneteBut" class="btn btn-info">Generate ball radius</button>
+          <button type="button" name="subBut" id="submitBut" class="btn btn-success">Calculate ball radius</button>
         <button type="button" name="cleanCanvas" id="cleanCanvas" class="btn btn-danger">Clear the Slate</button>
 
         
